# C-RPG

./: .gitignore  CMakeLists.txt  Makefile  README.md  cmake-version.md
doc/: 8bitfont.aseprite
include/: game.h  game_core.h  game_logic.h  game_render.h  game_util.h  menu.h  room.h  util.h
include/editor/: EDIT_context.h  EDIT_core.h  RPGE_EDIT_context.h  RPGE_EDIT_core.h  editor.h  editor_menu.h  editor_menu_ui.h
include/engine/: RPGE_E_container.h  RPGE_E_context.h  RPGE_E_display.h  RPGE_E_keymap.h  RPGE_E_runner.h  RPGE_E_time.h  game_components.h  game_core.h  game_logic.h  game_logic_map_decoder.h  game_menu.h  game_render.h  game_to_string.h  game_util.h
include/game/: RPG_context.h  RPG_core.h
include/lib/: cJSON.h  hashmap.h
include/util/: RPGE_U_array.h  RPGE_U_files.h  RPGE_U_json.h  RPGE_U_math.h  RPGE_U_matrix.h  RPGE_U_string.h  RPGE_U_vec.h
lib/SDL3_image-3.1.1/: .git-hash
res/: player.aseprite  tilesheet.aseprite
res/asprite/: Angel.aseprite  Blumenwiese01.aseprite  BurgClean.aseprite  BurgDirty.aseprite  DemonBreiter.aseprite  Dragon01.aseprite  Froggie.aseprite  FroggieCard.aseprite  Princess.aseprite  Studio_Logo.aseprite  WaldBoden.aseprite  WegRand.aseprite  WiesenRaender.aseprite  Wizard.aseprite  all.aseprite  editor_tilesheet.aseprite  font.aseprite  font_2.aseprite  menu.aseprite  screen_conzept.aseprite  sprite-base-1.0.0.aseprite  tilesheet-base-1.0.0.aseprite
res/tiled/: sdf.tmx  tilesheet-base-1.0.0.tsx  (+1 more)
src/: RPGE_EDITOR_main.c  RPGE_GAME_main.c  game.c  game_core.c  game_render.c  game_util.c  main.c  menu.c  util.c
(+136 files in other folders)
